adjusted some spacing issues.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -83,7 +83,7 @@ sign up and login
 }
 
 .link {
-  margin-top: 25px;
+  
   margin-right: 25px;
   font-family: "Coiny", Arial, Helvetica, sans-serif;
   text-align: left;
